--- a/view/layout/header.jade
+++ b/view/layout/header.jade
@@ -5,7 +5,7 @@ div.top-header
                 ul.menu
                     ul.menu
                         li.u-i.i-user
-                            a.i-link(v-show='user' style='display: hidden')
+                            a.i-link(v-show='user' style='display: hidden' href='/personalCenter')
                                 img.i-face(':src'='user.headImageUrl')
                         li.u-i
                             a.i-link(v-show='user' style='display: hidden') 消息
