--- a/public/less/personalCenter.less
+++ b/public/less/personalCenter.less
@@ -62,7 +62,6 @@ input, textarea {
       margin: 20px auto;
       text-align: center;
       .headImage {
-        background-image: url("../images/icon.png");
         width: 80px;
         height: 80px;
         border-radius: 50%;
@@ -163,17 +162,15 @@ input, textarea {
 
 .center-body {
   width: @width;
-  height: 500px;
-  border: 1px solid #27bce1;
   margin: 0 auto;
   position: relative;
   .card {
     padding: 5px 5px;
     float: left;
+    cursor: pointer;
     .article {
       width: 376px;
       height: 197px;
-
       display: block;
       box-sizing: border-box;
       -webkit-box-sizing: border-box;
@@ -182,7 +179,6 @@ input, textarea {
       position: relative;
       border-bottom: 3px solid #dedfe0;
       .article-content {
-
         .article-info {
           float: left;
           width: 200px;
@@ -256,6 +252,26 @@ input, textarea {
           }
         }
       }
+    }
+  }
+  .card-more {
+    margin-bottom: 10px;
+    background: #fff;
+    border: 1px solid #e7eaf1;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0, 37, 55, .05);
+    box-sizing: border-box;
+    .more {
+
+      width: 100%;
+      height: 50px;
+      font-size: 15px;
+      border: none;
+      border-radius: 0;
+      background-color: #ffffff;
+    }
+    .more:hover {
+      background-color: rgba(207, 216, 230, .1);
     }
   }
 }
