--- a/public/less/rankingList.less
+++ b/public/less/rankingList.less
@@ -27,14 +27,14 @@ body {
 
 a {
   outline: 0;
-  color: #ff1a26;
+  color: #52c4ed;
   text-decoration: none;
   cursor: pointer;
 }
 
 a:hover {
-  text-decoration: underline;
-  color: #4af7ff;
+  text-decoration: none;
+  color: #52c4ed;
 }
 
 ul, ol {
