--- a/public/less/index.less
+++ b/public/less/index.less
@@ -935,7 +935,17 @@ input, textarea {
     }
   }
 }
-
+.recommend{
+  clear: both;
+  position: relative;
+  margin: 0 auto;
+  width: 1160px;
+  span {
+    padding: 5px 0px;
+    color: brown;
+    cursor: pointer;
+  }
+}
 footer {
   clear: both;
   border-top: 1px solid #f1f1f1;
